src/test/deca/context/invalid/self/methode2.deca
class A {
    int x;
}

{
    A a = new A();
    println(a.x());
}